--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
                     <input type="range" min="1" max="50" step=".5" ng-model="process.fastTreshold" id="fastTresholdRange">
                 </div>
 
+                <label for="sizeSelect">Image size:</label>
+                <select ng-model="process.size" id="sizeSelect">
+                    <option value=720>720p</option>
+                    <option value=1080>1080p</option>
+                    <option value=2160>2160p</option>
+                    <option value=0>Original</option>
+                </select>
+
                 <div class="txt-center">
                     <a ng-click="reset()" class="button m-1x inline-block">Reset</a>
                 </div>
