--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body ng-controller="MainCtrl">
 
     <nav id="sidebar">
-        <div class="title p-1x">
+        <div class="title header">
             <h1>Triangulator</h1>
         </div>
 
@@ -60,6 +60,22 @@
     </nav>
 
     <main id="main">
+        <div class="top header">
+            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://javierborquez.com/lab/triangulator/" data-text="Triangulator" data-via="javierbyte">Tweet</a>
+            <script>
+            ! function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0],
+                    p = /^http:/.test(d.location) ? 'http' : 'https';
+                if (!d.getElementById(id)) {
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = p + '://platform.twitter.com/widgets.js';
+                    fjs.parentNode.insertBefore(js, fjs);
+                }
+            }(document, 'script', 'twitter-wjs');
+            </script>
+        </div>
+
         <div class="content p-1x">
             <canvas ng-file-select="onFileSelect($files)" ng-file-drop="onFileSelect($files)" accept="image/*" id="delaunay" class="sh"></canvas>
 
