Added a short description

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
 
         <div class="footer p-1x">
-            Created by <a href="http://javierborquez.com/">Javier Bórquez</a>.
+            Delaunay triangles image generator. Created by <a href="http://twitter.com/javierbyte">Javier Bórquez</a>.
         </div>
     </main>
 
