Changed url for twitter account

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="Triangulator">
 
 <head>
-    <title>Triangulator</title>
+    <title>Triangulator | Delaunay triangulation image generator.</title>
     <meta charset="utf-8">
 
     <link rel="stylesheet" href="css/style.css">
@@ -86,7 +86,7 @@
         </div>
 
         <div class="footer p-1x">
-            Delaunay triangles image generator. Created by <a href="http://twitter.com/javierbyte">Javier Bórquez</a>.
+            Delaunay triangulation image generator. Created by <a href="http://twitter.com/javierbyte">Javier Bórquez</a>.
         </div>
     </main>
 
